--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
